認証周りの更新
